# rust-axum-post-jwt-docker-boilerplate

./: .env  Cargo.toml  Dockerfile.dev  Dockerfile.prod  README  chatgpt-production-ready-dockerfile-test-it-later.txt  docker-compose.yml  overview.txt
migration/src/: lib.rs  m20250908_090347_create_categories_table.rs  m20250908_105333_create_users_table.rs  m20250909_145739_create_users_table.rs
src/: errors.rs  lib.rs  main.rs
src/app/: mod.rs
src/app/controllers/: mod.rs
src/app/controllers/admin/: auth_controller.rs  category_controller.rs  dashboard_controller.rs  mod.rs
src/app/controllers/customer/: auth_controller.rs
src/app/middleware/: admin_auth_middleware.rs  admin_guest_middleware.rs  customer_auth_middleware.rs  customer_guest_middleware.rs  mod.rs
src/config/: auth_bearer.rs  blacklist.rs  cache.rs  database.rs  jwt.rs  mail.rs  mod.rs  rabbitmq.rs  redis.rs
src/models/: user.rs
src/routes/: admin.rs  customer.rs  mod.rs
src/utils/: helper.rs
