[package]
name = "axum_seaorm_app"
version = "0.1.0"
edition = "2024"  

[dependencies]
axum = "0.7"
jsonwebtoken = "9"
axum-server = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sea-orm = { version = "0.11", features = ["sqlx-postgres", "runtime-tokio-native-tls"] }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
dotenvy = "0.15"
chrono = "0.4"   # expiry time handler
redis = { version = "0.24", features = ["tokio-comp"] }
once_cell = "1.18"  # For global static cache instance
